--- a/examples/autofit.html
+++ b/examples/autofit.html
@@ -154,8 +154,8 @@ worksheet column widths based on the data in the column.</p>
 </span><span class="boring">
 </span><span class="boring">//! An example of using simulated autofit to automatically adjust the width of
 </span><span class="boring">//! worksheet columns based on the data in the cells.
-</span>
-use rust_xlsxwriter::{Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
