--- a/examples/colors.html
+++ b/examples/colors.html
@@ -157,8 +157,8 @@ library.</p>
 </span><span class="boring">
 </span><span class="boring">//! A demonstration of the RGB and Theme colors palettes available in the
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::*;
+</span><span class="boring">
+</span>use rust_xlsxwriter::*;
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
