--- a/examples/defined_names.html
+++ b/examples/defined_names.html
@@ -160,8 +160,8 @@ Global/Workbook &quot;Sales&quot; variable name and a Local/Worksheet version.</
 </span><span class="boring">//!
 </span><span class="boring">//! This functionality is used to define user friendly variable names to
 </span><span class="boring">//! represent a value, a single cell,  or a range of cells in a workbook.
-</span>
-use rust_xlsxwriter::{Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
