--- a/examples/doc_properties.html
+++ b/examples/doc_properties.html
@@ -154,8 +154,8 @@ rust_xlsxwriter library.</p>
 </span><span class="boring">
 </span><span class="boring">//! An example of setting workbook document properties for a file created using
 </span><span class="boring">//! the rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::{Properties, Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Properties, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let mut workbook = Workbook::new();
