--- a/examples/formatting.html
+++ b/examples/formatting.html
@@ -156,8 +156,8 @@ sections of the Excel &quot;Format Cells&quot; dialog.</p>
 </span><span class="boring">//! An example of the various cell formatting options that are available in the
 </span><span class="boring">//! rust_xlsxwriter library. These are laid out on worksheets that correspond to
 </span><span class="boring">//! the sections of the Excel &quot;Format Cells&quot; dialog.
-</span>
-use rust_xlsxwriter::*;
+</span><span class="boring">
+</span>use rust_xlsxwriter::*;
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
