--- a/examples/hyperlinks.html
+++ b/examples/hyperlinks.html
@@ -156,8 +156,8 @@ the workbook.</p>
 </span><span class="boring">
 </span><span class="boring">//! A simple, getting started, example of some of the features of the
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError, XlsxUnderline};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError, XlsxUnderline};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
