--- a/examples/images.html
+++ b/examples/images.html
@@ -154,8 +154,8 @@
 </span><span class="boring">//! An example of inserting images into a worksheet using rust_xlsxwriter.
 </span><span class="boring">
 </span><span class="boring">use rust_xlsxwriter::{Image, Workbook, XlsxError};
-</span>
-fn main() -&gt; Result&lt;(), XlsxError&gt; {
+</span><span class="boring">
+</span>fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
     let mut workbook = Workbook::new();
 
