--- a/examples/lambda.html
+++ b/examples/lambda.html
@@ -155,8 +155,8 @@ library.</p>
 </span><span class="boring">
 </span><span class="boring">//! An example of using the new Excel LAMBDA() function with the rust_xlsxwriter
 </span><span class="boring">//! library.
-</span>
-use rust_xlsxwriter::{Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
