--- a/examples/merge_range.html
+++ b/examples/merge_range.html
@@ -156,8 +156,8 @@ types, such as number, as shown below.</p>
 </span><span class="boring">
 </span><span class="boring">//! An example of creating merged ranges in a worksheet using the
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxBorder, XlsxColor, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxBorder, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
