--- a/examples/protection.html
+++ b/examples/protection.html
@@ -154,8 +154,8 @@ protection.</p>
 </span><span class="boring">
 </span><span class="boring">//! Example of cell locking and formula hiding in an Excel worksheet
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
