--- a/examples/right_to_left.html
+++ b/examples/right_to_left.html
@@ -156,8 +156,8 @@ right-to-left, as required by some middle eastern versions of Excel.</p>
 </span><span class="boring">//! Example of using rust_xlsxwriter to create a workbook with the default
 </span><span class="boring">//! worksheet and cell text direction changed from left-to-right to
 </span><span class="boring">//! right-to-left, as required by some middle eastern versions of Excel.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
