--- a/examples/watermark.html
+++ b/examples/watermark.html
@@ -155,9 +155,9 @@ documentation</a>.</p>
 </span><span class="boring">
 </span><span class="boring">//! An example of adding a worksheet watermark image using the rust_xlsxwriter
 </span><span class="boring">//! library. This is based on the method of putting an image in the worksheet
-</span>//! header as suggested in the Microsoft documentation.
-
-use rust_xlsxwriter::{Image, Workbook, XlsxError, XlsxImagePosition};
+</span><span class="boring">//! header as suggested in the Microsoft documentation.
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Image, Workbook, XlsxError, XlsxImagePosition};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
