--- a/format/intro.html
+++ b/format/intro.html
@@ -154,8 +154,8 @@ borders, alignment and number formatting.</p>
 </span><span class="boring">
 </span><span class="boring">//! The following example demonstrates some of the available formatting
 </span><span class="boring">//! properties.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxBorder, XlsxColor, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxBorder, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
