--- a/format/locals.html
+++ b/format/locals.html
@@ -152,8 +152,8 @@ a number format with a &quot;grouping/thousands&quot; separator and a &quot;deci
 </span><span class="boring">
 </span><span class="boring">//! The following example demonstrates setting a number format that appears
 </span><span class="boring">//! differently in different locales.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
