--- a/workbook/intro.html
+++ b/workbook/intro.html
@@ -151,8 +151,8 @@ starting point for creating a new Excel xlsx file.</p>
 </span><span class="boring">
 </span><span class="boring">//! The following example demonstrates creating a simple workbook, with one
 </span><span class="boring">//! unused worksheet.
-</span>
-use rust_xlsxwriter::{Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let mut workbook = Workbook::new();
