--- a/worksheet/intro.html
+++ b/worksheet/intro.html
@@ -151,8 +151,8 @@
 </span><span class="boring">
 </span><span class="boring">//! A simple, getting started, example of some of the features of the
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use chrono::NaiveDate;
+</span><span class="boring">
+</span>use chrono::NaiveDate;
 use rust_xlsxwriter::{Format, Image, Workbook, XlsxAlign, XlsxBorder, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
