--- a/examples/headers.html
+++ b/examples/headers.html
@@ -169,9 +169,9 @@
 </span><span class="boring">
 </span><span class="boring">    // Add some sample text.
 </span><span class="boring">    worksheet1.write_string_only(0, 0, &quot;Some text&quot;)?;
-</span>
-<span class="boring">    worksheet1.set_header(&quot;&amp;CHere is some centered text.&quot;);
-</span><span class="boring">    worksheet1.set_footer(&quot;&amp;LHere is some left aligned text.&quot;);
+</span><span class="boring">
+</span>    worksheet1.set_header(&quot;&amp;CHere is some centered text.&quot;);
+<span class="boring">    worksheet1.set_footer(&quot;&amp;LHere is some left aligned text.&quot;);
 </span><span class="boring">
 </span><span class="boring">    // -----------------------------------------------------------------------
 </span><span class="boring">    // This is an example of some of the header/footer variables.
@@ -270,9 +270,9 @@
 </span><span class="boring">    worksheet2.set_view_page_layout();
 </span><span class="boring">    worksheet2.write_string_only(0, 0, &quot;Some text&quot;)?;
 </span><span class="boring">
-</span>    // Note the sections separators &quot;&amp;L&quot; (left) &quot;&amp;C&quot; (center) and &quot;&amp;R&quot; (right).
-<span class="boring">    worksheet2.set_header(&quot;&amp;LPage &amp;[Page] of &amp;[Pages]&amp;CFilename: &amp;[File]&amp;RSheetname: &amp;[Tab]&quot;);
-</span><span class="boring">    worksheet2.set_footer(&quot;&amp;LCurrent date: &amp;D&amp;RCurrent time: &amp;T&quot;);
+</span><span class="boring">    // Note the sections separators &quot;&amp;L&quot; (left) &quot;&amp;C&quot; (center) and &quot;&amp;R&quot; (right).
+</span>    worksheet2.set_header(&quot;&amp;LPage &amp;[Page] of &amp;[Pages]&amp;CFilename: &amp;[File]&amp;RSheetname: &amp;[Tab]&quot;);
+<span class="boring">    worksheet2.set_footer(&quot;&amp;LCurrent date: &amp;D&amp;RCurrent time: &amp;T&quot;);
 </span><span class="boring">
 </span><span class="boring">    // -----------------------------------------------------------------------
 </span><span class="boring">    // This is an example of setting a header image.
@@ -374,10 +374,10 @@
 </span><span class="boring">    let mut image = Image::new(&quot;examples/rust_logo.png&quot;)?;
 </span><span class="boring">    image.set_scale_height(0.5);
 </span><span class="boring">    image.set_scale_width(0.5);
-</span>
-    worksheet3.set_header(&quot;&amp;L&amp;[Picture]&quot;);
-<span class="boring">    worksheet3.set_header_image(&amp;image, XlsxImagePosition::Left)?;
 </span><span class="boring">
+</span>    worksheet3.set_header(&quot;&amp;L&amp;[Picture]&quot;);
+    worksheet3.set_header_image(&amp;image, XlsxImagePosition::Left)?;
+<span class="boring">
 </span><span class="boring">    // Increase the top margin to 1.2 for clarity. The -1.0 values are ignored.
 </span><span class="boring">    worksheet3.set_margins(-1.0, -1.0, 1.2, -1.0, -1.0, -1.0);
 </span><span class="boring">
@@ -477,9 +477,9 @@
 </span><span class="boring">    let worksheet4 = workbook.add_worksheet().set_name(&quot;Mixed fonts&quot;)?;
 </span><span class="boring">    worksheet4.set_view_page_layout();
 </span><span class="boring">    worksheet4.write_string_only(0, 0, &quot;Some text&quot;)?;
-</span>
-<span class="boring">    worksheet4.set_header(r#&quot;&amp;C&amp;&quot;Courier New,Bold&quot;Hello &amp;&quot;Arial,Italic&quot;World&quot;#);
-</span><span class="boring">    worksheet4.set_footer(r#&quot;&amp;C&amp;&quot;Symbol&quot;e&amp;&quot;Arial&quot; = mc&amp;X2&quot;#);
+</span><span class="boring">
+</span>    worksheet4.set_header(r#&quot;&amp;C&amp;&quot;Courier New,Bold&quot;Hello &amp;&quot;Arial,Italic&quot;World&quot;#);
+<span class="boring">    worksheet4.set_footer(r#&quot;&amp;C&amp;&quot;Symbol&quot;e&amp;&quot;Arial&quot; = mc&amp;X2&quot;#);
 </span><span class="boring">
 </span><span class="boring">    // -----------------------------------------------------------------------
 </span><span class="boring">    // Example of line wrapping.
@@ -577,9 +577,9 @@
 </span><span class="boring">    let worksheet5 = workbook.add_worksheet().set_name(&quot;Word wrap&quot;)?;
 </span><span class="boring">    worksheet5.set_view_page_layout();
 </span><span class="boring">    worksheet5.write_string_only(0, 0, &quot;Some text&quot;)?;
-</span>
-<span class="boring">    worksheet5.set_header(&quot;&amp;CHeading 1\nHeading 2&quot;);
 </span><span class="boring">
+</span>    worksheet5.set_header(&quot;&amp;CHeading 1\nHeading 2&quot;);
+<span class="boring">
 </span><span class="boring">    // -----------------------------------------------------------------------
 </span><span class="boring">    // Example of inserting a literal ampersand &amp;.
 </span><span class="boring">    // -----------------------------------------------------------------------
@@ -676,9 +676,9 @@
 </span><span class="boring">    let worksheet6 = workbook.add_worksheet().set_name(&quot;Ampersand&quot;)?;
 </span><span class="boring">    worksheet6.set_view_page_layout();
 </span><span class="boring">    worksheet6.write_string_only(0, 0, &quot;Some text&quot;)?;
-</span>
-<span class="boring">    worksheet6.set_header(&quot;&amp;CCuriouser &amp;&amp; Curiouser - Attorneys at Law&quot;);
 </span><span class="boring">
+</span>    worksheet6.set_header(&quot;&amp;CCuriouser &amp;&amp; Curiouser - Attorneys at Law&quot;);
+<span class="boring">
 </span><span class="boring">    workbook.save(&quot;headers_footers.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -692,8 +692,8 @@
 </span><span class="boring">
 </span><span class="boring">//! An example of setting headers and footers in worksheets using the
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::{Image, Workbook, XlsxError, XlsxImagePosition};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Image, Workbook, XlsxError, XlsxImagePosition};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
