--- a/examples/rich_strings.html
+++ b/examples/rich_strings.html
@@ -153,8 +153,8 @@
 </span><span class="boring">
 </span><span class="boring">//! An example of using the rust_xlsxwriter library to write &quot;rich&quot; multi-format
 </span><span class="boring">//! strings in worksheet cells.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxColor, XlsxError, XlsxScript};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxColor, XlsxError, XlsxScript};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
