--- a/format/creating.html
+++ b/format/creating.html
@@ -154,8 +154,8 @@ together, for example:</p>
 </span><span class="boring">
 </span><span class="boring">//! The following example demonstrates create a new format and setting the
 </span><span class="boring">//! properties.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -186,8 +186,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 </span><span class="boring">
 </span><span class="boring">//! The following example demonstrates cloning a format and setting the
 </span><span class="boring">//! properties.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
