--- a/formulas/intro.html
+++ b/formulas/intro.html
@@ -154,13 +154,13 @@
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
 </span><span class="boring">    let mut workbook = Workbook::new();
-</span>    let worksheet = workbook.add_worksheet();
-
-    worksheet.write_formula_only(0, 0, &quot;=10*B1 + C1&quot;)?;
+</span><span class="boring">    let worksheet = workbook.add_worksheet();
+</span><span class="boring">
+</span>    worksheet.write_formula_only(0, 0, &quot;=10*B1 + C1&quot;)?;
 
     worksheet.write_number_only(0, 1, 5)?;
-<span class="boring">    worksheet.write_number_only(0, 2, 1)?;
-</span><span class="boring">
+    worksheet.write_number_only(0, 2, 1)?;
+<span class="boring">
 </span><span class="boring">    workbook.save(&quot;formula.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
