--- a/getting_started.html
+++ b/getting_started.html
@@ -174,8 +174,8 @@ rust_xlsxwriter = &quot;0.23.0&quot;
 </span><span class="boring">
 </span><span class="boring">//! Create a simple Hello World style Excel spreadsheet using the
 </span><span class="boring">//! rust_xlsxwriter library.
-</span>
-use rust_xlsxwriter::{Workbook, XlsxError};
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
