--- a/performance.html
+++ b/performance.html
@@ -177,8 +177,8 @@ results, however these results are indicative of the relative performance.</p>
 </span><span class="boring">
 </span><span class="boring">//! Simple performance test for rust_xlsxwriter.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Workbook, XlsxError};
-
+</span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
+</span>
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let mut workbook = Workbook::new();
     let worksheet = workbook.add_worksheet();
