--- a/worksheet/create.html
+++ b/worksheet/create.html
@@ -173,8 +173,8 @@ prior to calling this method.</p>
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
 </span><span class="boring">    let mut workbook = Workbook::new();
-</span>
-    // Start with a reference to worksheet1.
+</span><span class="boring">
+</span>    // Start with a reference to worksheet1.
     let mut worksheet1 = workbook.add_worksheet();
     worksheet1.write_string_only(0, 0, &quot;Hello&quot;)?;
 
@@ -189,8 +189,8 @@ prior to calling this method.</p>
 
     // Stop using worksheet1 and move back to worksheet2.
     worksheet2 = workbook.worksheet_from_index(1)?;
-<span class="boring">    worksheet2.write_string_only(1, 0, &quot;Sheet2&quot;)?;
-</span><span class="boring">
+    worksheet2.write_string_only(1, 0, &quot;Sheet2&quot;)?;
+<span class="boring">
 </span><span class="boring">    workbook.save(&quot;workbook.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -208,8 +208,8 @@ using the worksheet names:</p>
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
 </span><span class="boring">    let mut workbook = Workbook::new();
-</span>
-    // Start with a reference to worksheet1.
+</span><span class="boring">
+</span>    // Start with a reference to worksheet1.
     let mut worksheet1 = workbook.add_worksheet();
     let name1 = worksheet1.name(); // &quot;Sheet1&quot;
     worksheet1.write_string_only(0, 0, &quot;Hello&quot;)?;
@@ -226,8 +226,8 @@ using the worksheet names:</p>
 
     // Stop using worksheet1 and move back to worksheet2.
     worksheet2 = workbook.worksheet_from_name(&amp;name2)?;
-<span class="boring">    worksheet2.write_string_only(1, 0, &quot;Sheet2&quot;)?;
-</span><span class="boring">
+    worksheet2.write_string_only(1, 0, &quot;Sheet2&quot;)?;
+<span class="boring">
 </span><span class="boring">    workbook.save(&quot;workbook.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -247,8 +247,8 @@ over all the worksheets in a workbook:</p>
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
 </span><span class="boring">    let mut workbook = Workbook::new();
-</span>
-    // Add three worksheets to the workbook.
+</span><span class="boring">
+</span>    // Add three worksheets to the workbook.
     let _worksheet1 = workbook.add_worksheet();
     let _worksheet2 = workbook.add_worksheet();
     let _worksheet3 = workbook.add_worksheet();
@@ -257,8 +257,8 @@ over all the worksheets in a workbook:</p>
     for worksheet in workbook.worksheets_mut() {
         worksheet.write_string_only(0, 0, &quot;Hello&quot;)?;
         worksheet.write_number_only(1, 0, 12345)?;
-<span class="boring">    }
-</span><span class="boring">
+    }
+<span class="boring">
 </span><span class="boring">    // If you are careful you can use standard slice operations.
 </span><span class="boring">    workbook.worksheets_mut().swap(0, 1);
 </span><span class="boring">
@@ -291,9 +291,9 @@ over all the worksheets in a workbook:</p>
 </span><span class="boring">        worksheet.write_number_only(1, 0, 12345)?;
 </span><span class="boring">    }
 </span><span class="boring">
-</span>    // If you are careful you can use standard slice operations.
-<span class="boring">    workbook.worksheets_mut().swap(0, 1);
-</span><span class="boring">
+</span><span class="boring">    // If you are careful you can use standard slice operations.
+</span>    workbook.worksheets_mut().swap(0, 1);
+<span class="boring">
 </span><span class="boring">    workbook.save(&quot;workbook.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -321,8 +321,8 @@ method:</p>
 </span><span class="boring">
 </span><span class="boring">use rust_xlsxwriter::{Workbook, Worksheet, XlsxError};
 </span><span class="boring">
-</span>fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new workbook.
+</span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
+</span>    // Create a new workbook.
     let mut workbook = Workbook::new();
 
     // Create new worksheets.
@@ -339,8 +339,8 @@ method:</p>
 
     // Add the worksheets to the workbook.
     workbook.push_worksheet(worksheet1);
-<span class="boring">    workbook.push_worksheet(worksheet2);
-</span><span class="boring">
+    workbook.push_worksheet(worksheet2);
+<span class="boring">
 </span><span class="boring">    // Save the workbook.
 </span><span class="boring">    workbook.save(&quot;worksheets.xlsx&quot;)?;
 </span><span class="boring">
